# templates

./: .gitignore
.github/workflows/: bump-versions.yml  init-smoke.yml
iii/: default-iii-config.yaml  default-iii-worker.yaml  template.yaml
iii/bare/: template.yaml
iii/docker/: Dockerfile  docker-compose.yml  template.yaml
iii/multi-worker-orchestration/: README.md  template.yaml
iii/quickstart/: README.md  template.yaml
iii/quickstart-ai-agents/: README.md  docker-compose.yaml  template.yaml
iii/quickstart-ai-agents/workers/ai-agent/: agent.py  (+1 more)
iii/starter/: package.json  template.yaml
iii/starter/src/: example.py  index.ts
iii/worker-bare/: Cargo.toml  iii.worker.js.yaml  iii.worker.py.yaml  iii.worker.rust.yaml  iii.worker.ts.yaml  iii.worker.yaml  main.py  package.js.json  package.json  package.ts.json  pyproject.toml  requirements.txt  template.yaml
iii/worker-bare/src/: index.js  index.ts  main.py  main.rs
motia/: default-gitignore  default-motia-iii-config.yaml  template.yaml
motia/blank/: motia-workbench.json  motia.config.ts  package.json  template.yaml
motia/blank/src/: typescript.step.ts
motia/quickstart/: README.md  iii.config.yaml  package.json  template.yaml
motia/quickstart/src/: create-ticket.step.ts  escalate-ticket.step.ts  javascript.step.js  list-tickets.step.ts  listener.step.ts  notify-customer.step.ts  python_step.py  sla-monitor.step.ts  start.step.ts  start.step.tsx  triage-ticket.step.ts  tutorial.config.ts  typescript.step.ts
scripts/: bump_versions.py  notify-slack.sh  smoke-init.sh
tapes/: init-smoke.tape
(+28 files in other folders)
