[project]
name = "my-worker"
version = "0.1.0"
description = "A standalone iii worker"
requires-python = ">=3.11"
dependencies = [
    "iii-sdk==0.19.0",
    "iii-observability==0.19.0",
    "watchfiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single-module worker: the entry point is src/main.py rather than a package.
# Tell hatchling to build exactly that module so `pip install -e .` succeeds.
[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]
